--- a/springboot01hellowworld/src/main/resources/application.properties
+++ b/springboot01hellowworld/src/main/resources/application.properties
@@ -1,13 +1,17 @@
-#ÅäÖÃ¶Ë¿ÚºÅ
-server.port=8081
+#\u4FEE\u6539\u7AEF\u53E3\u53F7
+server.port=8080
 
-#ÅäÖÃpersonµÄÖµ
-person.last-name="°¢¼ª"
-person.age=18
-person.birth=2020/10/10
+# \u6FC0\u6D3Bprofile,\u5373\u6FC0\u6D3Bapplication\u914D\u7F6E\u6587\u4EF6\uFF0C\u9ED8\u8BA4\u6FC0\u6D3B\u672C\u914D\u7F6E\u6587\u4EF6\uFF0C
+# \u4E5F\u80FD\u8F93\u5165\u547D\u4EE4\u884C\uFF1Ajava -jar spring-bootxxxx --spring.profiles.activate=dev;\u5176\u4E2Ddev\u662F\u6307\u5B9A\u8FD0\u884C\u7684\u914D\u7F6E\u6587\u4EF6
+spring.profiles.active=prod
+
+#person\u914D\u7F6E
+person.last-name=\u963F\u5409${random.uuid}
+person.age=19
+person.birth=2019/10/10
 person.boss=false
 person.maps.k1=v1
 person.maps.k2=14
-person.lists=1,2c,c,°¡
-person.dog.name=dog
+person.lists=1,2c,c,\u554A
+person.dog.name=${person.last-name}dog
 person.dog.age = 4
