--- a/springboot01hellowworld/src/main/resources/application-dev.properties
+++ b/springboot01hellowworld/src/main/resources/application-dev.properties
@@ -1,1 +1,17 @@
+#配置项目访问路径开启后变成：http:domain:8081/dev/hello
+server.context-path=/dev
 server.port=8081
+#日志级别
+logging.level.com.jim=trace
+
+#指定日志输出完整的路径
+#logging.path=/spring/log
+#logging.file=/springbootlog.log
+
+# 在控制台输出的日志格式
+# logging.pattern.console=
+# 指定文件中日志输出的格式
+# logging.pattern.file=
+
+## 静态文件配置路径
+#spring.resources.static-locations=classpath:/hello/,classpath:/jim/
