--- a/springboot01hellowworld/src/main/resources/application.properties
+++ b/springboot01hellowworld/src/main/resources/application.properties
@@ -1,12 +1,11 @@
-#\u4FEE\u6539\u7AEF\u53E3\u53F7
+#运行端口
 server.port=8080
 
-# \u6FC0\u6D3Bprofile,\u5373\u6FC0\u6D3Bapplication\u914D\u7F6E\u6587\u4EF6\uFF0C\u9ED8\u8BA4\u6FC0\u6D3B\u672C\u914D\u7F6E\u6587\u4EF6\uFF0C
-# \u4E5F\u80FD\u8F93\u5165\u547D\u4EE4\u884C\uFF1Ajava -jar spring-bootxxxx --spring.profiles.activate=dev;\u5176\u4E2Ddev\u662F\u6307\u5B9A\u8FD0\u884C\u7684\u914D\u7F6E\u6587\u4EF6
-spring.profiles.active=prod
+#指定运行配置文件
+spring.profiles.active=dev
 
-#person\u914D\u7F6E
-person.last-name=\u963F\u5409${random.uuid}
+#person的配置文件
+person.last-name=阿吉${random.uuid}
 person.age=19
 person.birth=2019/10/10
 person.boss=false
