--- a/spring-boot-mysql/src/main/resources/application.yml
+++ b/spring-boot-mysql/src/main/resources/application.yml
@@ -4,7 +4,23 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://127.0.0.1:8889/jdbc
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  autoconfigure:
-      exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
+    url: jdbc:mysql://127.0.0.1:3306/jdbc_template
+    driver-class-name: com.mysql.jdbc.Driver
+    #initialization-mode: always
+    #schema: classpath:sql/department.sql
+    type: com.alibaba.druid.pool.DruidDataSource
+    initialSize: 5
+    maxAction: 5
+    maxWait: 60000
+    timeBetweenEvictionRunsMillis: 600000
+    minEvictableIdleTimeMillis: 30000
+    validationQuery: SELECT 1 FROM DUAL
+    testdationQuery: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    #配置监控统计拦截的filters，去掉后监控界面sql无法统计，‘wall’用于防火墙
+    filters: stat,wall,log4j
+    maxPoolPreparedStatementPerConnectionSize: 20
+    useGlobalDataSourceStat: true
+    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
