--- a/spring-boot-mysql/src/main/resources/application.yml
+++ b/spring-boot-mysql/src/main/resources/application.yml
@@ -24,3 +24,9 @@ spring:
     maxPoolPreparedStatementPerConnectionSize: 20
     useGlobalDataSourceStat: true
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+#mybatis配置
+mybatis:
+  # 指定全局配置文件的位置
+  config-location:  classpath:mybatis/mybatis-config.xml
+  # 指定sql映射文件的位置
+  mapper-locations: classpath:mybatis/mapper/*.xml
