项目初始化

--- a/mpdemo/pom.xml
+++ b/mpdemo/pom.xml
@@ -15,6 +15,7 @@
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>11</java.version>
+        <spring.version>2.4.2</spring.version>
     </properties>
     <dependencies>
         <dependency>
