swagger整合，修改json返回格式

--- a/jim_parent/service/pom.xml
+++ b/jim_parent/service/pom.xml
@@ -17,6 +17,14 @@
     </modules>  <!-- 定于父工程 -->
 
     <dependencies>
+        <!-- 在service引入service_base依赖 -->
+        <dependency>
+            <groupId>com.jim</groupId>
+            <artifactId>service_base</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+
         <!--<dependency>-->
             <!--<groupId>org.springframework.cloud</groupId>-->
             <!--<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>-->
