--- a/jim_parent/common/pom.xml
+++ b/jim_parent/common/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging> <!-- 定于父工程 -->
     <modules>
         <module>service_base</module>
+        <module>common_utils</module>
     </modules>
 
     <dependencies>
