--- a/jim_parent/service/pom.xml
+++ b/jim_parent/service/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>service_base</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <!-- 在service引入common_utils依赖 -->
+        <dependency>
+            <groupId>com.jim</groupId>
+            <artifactId>common_utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
 
         <!--<dependency>-->
