带参数分页查询列表，添加或者跟新自动填充，自定义全局异常

--- a/jim_parent/common/service_base/pom.xml
+++ b/jim_parent/common/service_base/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>service_base</artifactId>
 
+    <dependencies>
+        <!-- 在service引入service_base依赖 -->
+        <dependency>
+            <groupId>com.jim</groupId>
+            <artifactId>common_utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
